--- a/lab1a/Makefile
+++ b/lab1a/Makefile
@@ -1,13 +1,14 @@
 CC=gcc
 
-CFLAGS=-g -Wall
+CFLAGS=-Wall -pthread
+
+GDBFLAGS=-g -Wall -pthread
 
 all:
 	$(CC) $(CFLAGS) lab1a.c -o lab1a
-	
+
 clean:
 	rm lab1a
-	rm -r lab1a.dSYM
 
 dist:
 	tar pczf lab1a-303652195.tar.gz lab1a.c Makefile README
