--- a/lab1b/Makefile
+++ b/lab1b/Makefile
@@ -4,8 +4,16 @@ CFLAGS=-Wall -pthread -lmcrypt
 
 GDBFLAGS=-g -Wall -pthread -lmcrypt
 
+DEPS=cliserv.h
+
 all:
 	$(CC) $(CFLAGS) client.c -o client
+	$(CC) $(CFLAGS) server.c -o server
+
+client:
+	$(CC) $(CFLAGS) client.c -o client
+
+server:
 	$(CC) $(CFLAGS) server.c -o server
 	
 clean:
