fix bug, add readme

--- a/lab3b/Makefile
+++ b/lab3b/Makefile
@@ -4,5 +4,12 @@ run:
 clean:
 	rm *.txt
 
+check:
+	sort lab3b_check.txt > sorted_test.txt
+	sort lab3b_check_real.txt > sorted_real.txt
+	diff sorted_test.txt sorted_real.txt
+	rm sorted_test.txt
+	rm sorted_real.txt
+
 dist:
 	tar pczf lab3b-303652195.tar.gz lab3b.py Makefile README
