add csvs to lab 3b

--- a/lab3b/Makefile
+++ b/lab3b/Makefile
@@ -2,7 +2,7 @@ run:
 	python lab3b.py super.csv group.csv bitmap.csv inode.csv directory.csv indirect.csv
 
 clean:
-	rm *.txt
+	rm lab3b_check.txt
 
 check:
 	sort lab3b_check.txt > sorted_test.txt
@@ -12,4 +12,4 @@ check:
 	rm sorted_real.txt
 
 dist:
-	tar pczf lab3b-303652195.tar.gz lab3b.py Makefile README
+	tar pczf lab3b-303652195.tar.gz lab3b.py Makefile README *.csv *.txt
