part 1 part 2 BS

--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -5,12 +5,14 @@ CFLAGS=-Wall -lmraa -lm -std=gnu99
 GDBFLAGS=-g -Wall -pthread
 
 all:
-	$(CC) $(CFLAGS) lab4.c -o lab4
+	$(CC) $(CFLAGS) part1.c -o part1
+	$(CC) $(CFLAGS) part2.c -o part2
 
 clean:
-	rm lab4
+	rm part1
+	rm part2
 
 check:
 
 dist:
-	tar pczf lab4-303652195.tar.gz lab4.c Makefile sample_log.txt README
+	tar pczf lab4-303652195.tar.gz part1.c part2.c part1_log.txt part2_log.txt Makefile README
